# probing-mpe

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/reduced_mpe/simple_speaker_listener_v4/: ippo_ff.yaml  ippo_rnn.yaml  mappo_ff.yaml  mappo_rnn.yaml
configs/reduced_mpe/simple_spread_v3/: ippo_ff.yaml  ippo_rnn.yaml  mappo_ff.yaml  mappo_rnn.yaml
scripts/: compute_behavioral_metrics.py  compute_diagnostics_from_trajectory.py  export_benchmarl_trajectory.py  make_plots.py  render_video.py  run_benchmarl_smoke.py  run_checkpointed_diagnostics.py  run_full_cell.py  run_matrix.py  run_random_baseline.py  run_single.py
scripts/shell/: compute_behavioral_metrics.sh  compute_diagnostics.sh  export_trajectory.sh  make_plots.sh  run_matrix.sh  run_single.sh  setup_runpod.sh  sync_wandb.sh
src/probing_mpe/: __init__.py  evaluation.py  metrics.py  plotting.py  random_baseline.py  rendering.py  trajectories.py
src/probing_mpe/experiments/: __init__.py  artifacts.py  run_benchmarl_smoke.py  run_checkpointed_diagnostics.py  run_full_cell.py  run_matrix.py  run_single.py
tests/: test_checkpointed_diagnostics.py  test_compute_behavioral_metrics.py  test_compute_diagnostics_from_trajectory.py  test_export_benchmarl_trajectory.py  test_make_plots.py  test_project_metadata.py  test_render_video.py  test_run_artifacts.py  test_run_benchmarl_smoke.py  test_run_full_cell.py  test_run_matrix.py  test_runpod_setup.py
