[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probing_mpe"
version = "0.1.0"
description = "Probing Dec-POMDPs in Multi-Agent Particle Environments"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "PyYAML",
    "python-dotenv",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
