[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probing_mpe"
version = "0.1.0"
description = "Probing Dec-POMDPs in Multi-Agent Particle Environments"
requires-python = ">=3.11"
dependencies = [
    "dec-pomdp-diagnostics @ git+https://github.com/KaleabTessera/probing-dec-pomdps.git@c8881e8dc41258727ddf814c9348f6bbc0177a56",
    "matplotlib",
    "numpy",
    "PyYAML",
    "python-dotenv",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
